# ideal-octo-telegram

./: .env.dev  .gitignore  .pre-commit-config.yaml  .vimspector.json  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: ci.yml
deploy/: deploy_code.yml  hosts.yml.example
deploy/roles/server_deployment/defaults/: main.yml
deploy/roles/server_deployment/files/: dot_env.j2
deploy/roles/server_deployment/handlers/: main.yml
deploy/roles/server_deployment/tasks/: main.yml
deploy/roles/server_deployment/tests/: test.yml
deploy/roles/server_deployment/vars/: main.yml
dev_setup/: Dockerfile.database  Dockerfile.message_broker  docker-compose.yml
docker/: Dockerfile.nginx  nginx.conf
docs/: schema.yml
src/: .coveragerc
src/api/: urls.py
src/api/gateway/: serializers.py  urls.py  views.py
src/api/hosts/: serializers.py
src/api/mushroom_sensors/: serializers.py
src/api/sensor/: serializers.py  urls.py  views.py
src/api/sensor_report/: serializers.py  urls.py  views.py
src/api/sensor_target/: serializers.py  urls.py  views.py
src/api/sensors/: serializers.py  urls.py
src/api/sensors/views/: devices_views.py  sensors_views.py
src/common/models/mixins/: timestamps.py
src/common/serializers/: default_ip_address.py  uuid_primary_key_related_field.py
src/common/views/: common_viewset.py
src/commons/helpers/: cryptography_helper.py
src/commons/models/: fields.py
src/gateway/: models.py
src/gateway/migrations/: 0001_initial.py
src/hosts/: apps.py  models.py
src/hosts/migrations/: 0001_initial.py
src/mqtt_integration/: mqtt_handler.py
src/mushroom_sensors/: apps.py  models.py
src/mushroom_sensors/migrations/: 0001_initial.py  0002_auto_20210920_0102.py
src/sensor/: apps.py  models.py
src/sensor/migrations/: 0001_initial.py  0002_alter_sensor_name.py
src/sensor_report/: apps.py  constants.py  models.py
src/sensor_report/migrations/: 0001_initial.py  0002_rename_type_sensorreport_value_type.py  0002_sensordata_target.py
src/sensor_target/: apps.py  constants.py  models.py
src/sensor_target/migrations/: 0001_initial.py
src/sensors/: __init__.py  apps.py  constants.py  models.py
src/sensors/migrations/: 0001_initial.py  0002_auto_20210920_0313.py  0002_remove_sensors_sensors_data.py  0002_rename_json_data_sensors_sensors_data.py
src/settings/: asgi.py  base.py  dev.py  prod.py  settings.py  wsgi.py
src/src/: settings.py
src/tests/: conftest.py
src/tests/factories/: common.py  gateway_factory.py  sensor_factory.py  sensor_report_factory.py  sensor_target_factory.py
src/tests/integrations/api/sensors/: tests_device_viewset.py
src/tests/integrations/api/test_gateway/: test_gateway_viewset.py
src/tests/integrations/api/test_sensor/: test_sensor_viewset.py
src/tests/integrations/api/test_sensor_report/: test_sensor_report.py
src/tests/integrations/api/test_sensor_target/: test_sensor_target_viewset.py
src/tests/integrations/api/test_sensors/: test_device_viewset.py
