[tool.poetry]
name = "Ideal Octo Telegram"
version = "0.1.0"
description = ""
authors = ["Jeff Labonte <grimsleepless@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
djangorestframework = "^3.14.0"
paramiko = "^2.12.0"
celery = "^5.2.7"
pgsql = "^1.2"
dj-rest-auth = "^2.2.6"
django-allauth = "^0.52.0"
gunicorn = "^20.1.0"
django-cors-headers = "^3.13.0"
drf-spectacular = "^0.25.1"
pika = "^1.3.1"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12"
flake8 = "^5.0.4"
isort = "^5.11.3"
pre-commit = "^2.20.0"
pynvim = "^0.4.3"
pytest-django = "^4.5.2"
pytest-testdox = "^3.0.1"
factory-boy = "^3.2.1"
mypy = "^0.991"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max_length = 160

[tool.black]
target-version = ["py38",]
include = '\.pyi?$'
line-length = 120
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black" 
multi_line_output = 3

[tool.pyright]
python.analysis.autoImportCompletions = true
