[tool.poetry]
name = "Ideal Octo Telegram"
version = "0.1.0"
description = ""
authors = ["Jeff Labonte <grimsleepless@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2"
djangorestframework = "^3.14.0"
paramiko = "^3.1.0"
celery = "^5.2.7"
pgsql = "^1.2"
dj-rest-auth = "^4.0.0"
django-allauth = "^0.54.0"
gunicorn = "^20.1.0"
django-cors-headers = "^3.14.0"
drf-spectacular = "^0.26.2"
pika = "^1.3.1"
psycopg2-binary = "^2.9.6"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
black = "^23.3"
flake8 = "^5.0.4"
isort = "^5.12.0"
pre-commit = "^3.3.1"
pynvim = "^0.4.3"
pytest-django = "^4.5.2"
pytest-testdox = "^3.0.1"
factory-boy = "^3.2.1"
mypy = "^1.2"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max_length = 160

[tool.black]
target-version = ["py38",]
include = '\.pyi?$'
line-length = 120
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black" 
multi_line_output = 3

[tool.pyright]
python.analysis.autoImportCompletions = true
